--- a/Day 3-checkpoint.ipynb
+++ b/Day 3-checkpoint.ipynb
@@ -364,7 +364,7 @@
    "outputs": [],
    "source": [
     "#Q1 Make a list of 100 even numbers and print it\n",
-    "#Q2 Make a list of prime numbers between 1 to 200 and print it indivisualy"
+    "#Q2 Make a list of prime numbers between 1 to 200 and print it individualy"
    ]
   }
  ],
